--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch-tailwind": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "build-tailwind": "npx tailwindcss -i ./src/input.css -o ./src/output.css",
+    "start": "concurrently \"npm run dev\" \"npm run watch-tailwind\""
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
+    "concurrently": "^7.1.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.5"
