Modify style-src to allow Netlify css

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,5 +6,5 @@
     X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
-    Content-Security-Policy = "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; font-src fonts.gstatic.com;style-src 'unsafe-inline' fonts.googleapis.com; base-uri 'self'; form-action 'self';"
+    Content-Security-Policy = "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; font-src fonts.gstatic.com; style-src 'unsafe-inline' fonts.googleapis.com https://courageous-belekoy-066aae.netlify.app/*; base-uri 'self'; form-action 'self';"
 
